--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script type="text/javascript" src="src/properties.js"></script>
-    <script data-main="src/js/app.js" src="src/js/require.js"></script>
-</head>
-<body>
-</body>
+    <head>
+        <title>Redirecting</title>
+        <meta http-equiv="REFRESH" content="0; url=src/index.html">
+    </head>
+    <body>
+    </body>
 </html>
